Fix CategroyComponent being too high inside CreateItemButtonComponent

--- a/client/src/CategoryComponent.module.css
+++ b/client/src/CategoryComponent.module.css
@@ -2,6 +2,7 @@
   width: 3rem;
   height: 3rem;
   flex-shrink: 0;
+  display: flow-root;
 }
 .Circle {
   width: 80%;
